Maded changes in all yml deployment_token etc

--- a/azure-static-app-build-manualApproval-deploySatage.yml
+++ b/azure-static-app-build-manualApproval-deploySatage.yml
@@ -56,7 +56,7 @@ stages:
       submodules: true
     - task: AzureStaticWebApp@0
       inputs:
-        azure_static_web_apps_api_token: $(AZURE_STATIC_WEB_APPS_API_TOKEN_JOLLY_RIVER_042E91B10)
+        azure_static_web_apps_api_token: $(deployment_token)
         app_location: "/" # Specify the source code path
         api_location: "" # Api source code path - optional
         output_location: "dist" # Built app content directory - optional
