--- a/azure-static-app-build-deploySatage.yml
+++ b/azure-static-app-build-deploySatage.yml
@@ -26,20 +26,20 @@ stages:
 
 - stage: DeployToStaging
   displayName: Deploy to Staging Stage
-  dependsOn: ManualApprovalAfterBuild
+  #dependsOn: ManualApprovalAfterBuild
   jobs:
   - job: deploy_to_staging_job
     displayName: Deploy to Staging Job
     pool:
       vmImage: ubuntu-latest
     variables:
-    - group: Azure-Static-Web-Apps-jolly-river-042e91b10-variable-group
+    - group: Azure-Static-Web-Apps-jolly-river-042e91b10-variable-group 
     steps:
     - checkout: self
       submodules: true
     - task: AzureStaticWebApp@0
       inputs:
-        azure_static_web_apps_api_token: $(AZURE_STATIC_WEB_APPS_API_TOKEN_JOLLY_RIVER_042E91B10)
+        azure_static_web_apps_api_token: $(deployment_token)
         app_location: "/" # Specify the source code path
         api_location: "" # Api source code path - optional
         output_location: "dist" # Built app content directory - optional
