Update azure-static-app-build-manualApproval-deploySatage.yml for Azure Pipelines

--- a/yml-pipelines/azure-static-app-build-manualApproval-deploySatage.yml
+++ b/yml-pipelines/azure-static-app-build-manualApproval-deploySatage.yml
@@ -35,7 +35,7 @@ stages:
       timeoutInMinutes: 5 # task times out in 1 day
       inputs:
         notifyUsers: |
-          sarath@psitrontech.com
+          03sarath@gmail.com
         instructions: 'Please validate the build configuration and resume'
         onTimeout: 'resume'
 
