--- a/yml-pipelines/azure-static-app-build-manualApproval-deploySatage.yml
+++ b/yml-pipelines/azure-static-app-build-manualApproval-deploySatage.yml
@@ -29,7 +29,7 @@ stages:
   - job: waitForValidation
     displayName: Wait for external validation  
     pool: server    
-    timeoutInMinutes: 10 # job times out in 3 days
+    #timeoutInMinutes: 10 # job times out in 3 days
     steps:   
     - task: ManualValidation@0
       timeoutInMinutes: 5 # task times out in 1 day
